argo/deployments/blue-green/bluegreen-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-active
  namespace: argo-demo
spec:
  selector:
    app: rollout-bluegreen
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-preview
spec:
  selector:
    app: rollout-bluegreen
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
